# py-recipe-api-site

./: .gitignore  README.md  main.py  pyproject.toml
src/RP5-Recipy-Frontend/static/: create_recipe.py  header_buttons.py  index.html  register.html  style.css  user.html
src/RP5_Recipy_Frontend/: main.py
src/RP5_Recipy_Frontend/static/: login.html  login.py  me.html  recipe.html  recipe.py  register.py
static/: app.py  create_recipe.py  header_buttons.py  index.html  login.html  login.py  me.html  me.py  recipe.html  recipe.py  register.html  register.py  style.css  user.html  user.py
