[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RP5-Recipy-Frontend"
version = "0.0.1"
description = "Recipy is a website for creating and managing recipes"
authors = [
    {name="ConstintCreations"}
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]

requires-python = ">=3.8"

dependencies = [
    "fastapi[standard]", "slowapi", "requests", "pillow"
]

keywords = ["api", "recipes", "website"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Natural Language :: English"
]

[project.scripts]
RP5-Recipy-Frontend = "RP5_Recipy_Frontend.main:main"

[project.urls]
Homepage = "https://github.com/ConstintCreations/py-recipe-api-site"
Repository = "https://github.com/ConstintCreations/py-recipe-api-site"
